fixes schema overflow

--- a/src/client/backup/schema.scss
+++ b/src/client/backup/schema.scss
@@ -4,5 +4,7 @@
 .schema {
   pre {
     @include font-scale(-2);
+
+    overflow: auto;
   }
 }
